# music

./: .eslintignore  .eslintrc.json  package.json  tsconfig.json  vite.config.ts
docs/: build-log  plan
music-api/: Cargo.toml
music-api/src/: lib.rs
music-api/src/netease/: encrypt.rs  encrypt_example.rs  mod.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/applications/: mod.rs
src-tauri/src/applications/netease/: encryption.rs  mod.rs
src-tauri/src/applications/netease/api/: get_login_status.rs  get_playlist_detail.rs  get_qrcode.rs  get_qrlogin_status.rs  get_user_account.rs  list_playlist.rs  mod.rs
src-tauri/src/applications/request/netease/: app.rs  encryption.rs  mod.rs
src-tauri/src/applications/request/netease/api/: list_playlist.rs  mod.rs
src-tauri/src/services/: emit.rs  log.rs  mod.rs
src-tauri/src/services/netease/: mod.rs
src-tauri/src/services/request/: cmd.rs
src-tauri/src/utils/: macros.rs
src/assets/styles/: index.css
src/components/base/: base-error-bountery.tsx
src/components/layout/: navi-buttons.tsx  platform-bar.tsx  player-bar.tsx
src/components/login/: login-dialog.tsx  netease-qrcode-dialog.tsx
src/components/main/: recommand-list-toolbar.tsx  recommand-list.tsx  search-bar.tsx
src/components/playlist/: playlist-info.tsx  songlist.tsx
src/pages/: layout.tsx  login.tsx  main.tsx  playlist.tsx  routers.ts  routers.tsx
src/services/: type.d.ts
src/stores/: login.ts  netease-qrcode-dialog.ts  platform-bar.ts  recommend-list.ts  theme.ts
(+2 files in other folders)
