[package]
name = "music_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hex = "0.4.3"
isahc = { version = "1.7.2", features = ["cookies"]}
lazy_static = "1.4.0"
openssl = "0.10.48"
rand = "0.8.5"
urlqstring = "0.3.5"
