[package]
name = "netease-music"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
music_api = { path = "../music-api" }
isahc = { version = "1.7.2", features = ["cookies"] }
log = "0.4.17"
openssl = "0.10.48"
rand_core = "0.6.4"
base64 = "0.21.0"
hex = "0.4.3"
urlqstring = "0.3.5"
anyhow = "1.0.70"
rand = "0.8.5"
actix-rt = "2.8.0"
async-std = "1.12.0"
cookie_store = "0.19.0"
chrono = "0.4.24"
log4rs = "1.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
music-dev = []
